force-app/main/default/objects/Campaign_Product__c/Campaign_Product__c.object-meta.xml
<CustomObject>
    <label>Campaign Product</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Campaing Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>