force-app/main/default/objects/Campaign_Product__c/fields/Campaign_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Record_Type__c</fullName>
    <formula>Campaign__r.RecordType_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Record Type</label>
    <type>Text</type>
</CustomField>