force-app/main/default/objects/Campaign_Product__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Observation notes for Campaign Product (long text)</description>
    <label>Observation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>