force-app/main/default/objects/Campaign_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipLabel>Campaign Product</relationshipLabel>
    <relationshipName>Campaign_Product_Name</relationshipName>
    <type>Lookup</type>
</CustomField>