force-app/main/default/objects/Campaign_Product__c/fields/Product_Unit_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Product Unit (stores the Product_Unit__c record selected for this Campaign Product)</description>
    <label>Product Unit</label>
    <referenceTo>Product_Unit__c</referenceTo>
    <relationshipLabel>Campaign Product Units</relationshipLabel>
    <relationshipName>CampaignProductUnits</relationshipName>
    <type>Lookup</type>
</CustomField>