force-app/main/default/objects/Campaign_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Campaign__r.Approval_Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>